<resources>
    <string name="app_name">BloodBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_of_rights">جميع الحقوق محفوظه لـ شركة ابداع تك للبرمجيات ©</string>
    <string name="skip">Skip</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="register">Create a new account</string>
    <string name="phone">Mobile number</string>
    <string name="password">password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="name">The name</string>
    <string name="email">E-mail</string>
    <string name="date_of_bearth">Date of Birth</string>
    <string name="faction">Blood Fraction</string>
    <string name="last_donation">Other Date Donated</string>
    <string name="add">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_data">My Information</string>
    <string name="setting_notify">Notification settings</string>
    <string name="favorite">Favorite</string>
    <string name="my_home">Main</string>
    <string name="details">User instructions</string>
    <string name="call_me">Connect with us</string>
    <string name="exit">sign out</string>
    <string name="shared_preferences_user">SaveDataUser</string>
    <string name="send_Code">send</string>
    <string name="forget_password_">Forgot your password</string>
    <string name="pin_code">Pin Code</string>
    <string name="change_password_code">Change password code</string>
    <string name="confirmation_code_wrong">The confirmation code is wrong</string>
    <string name="number_does_not_correspond">This number does not correspond</string>
    <string name="It_should_be_the_largest6">It should be the largest 6</string>
    <string name="confirmation_number_error">The confirmation number is an error</string>
    <string name="governorates">Governorate</string>
    <string name="city">City</string>
    <string name="requst_donation">blood donation</string>
    <string name="articles">Articles</string>
    <string name="search"> search</string>
    <string name="name_of_the_case">Name of the case:</string>
    <string name="hospital">Hospital:</string>
    <string name="name_hospital">Name Hospital:</string>
    <string name="citys">City:</string>
    <string name="names">Name:</string>
    <string name="age">Age:</string>
    <string name="blood_type">Blood Type:</string>
    <string name="hospital_address"> Hospital Address :</string>
    <string name="details_">Details:</string>
    <string name="call">Call</string>
    <string name="donation_request">Donation request</string>
    <string name="number_of_bags_required">Number of bags required:</string>
    <string name="modify_the_data">Modify the dataNotifyPage</string>
    <string name="note">Note</string>
    <string name="send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogMessage" >GPS Alert Dialog Setting</string>
    <string name="GPSAlertDialogTitle" >GPS Alert Dialog Setting</string>
    <string name="my_location">MyLocation</string>
    <string name="notify" >notifications</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="details_about">هذا النص هو مثال لنص يمكن ان يستبدل في نفس المساحه لقد تم توليد هضا النص من مولد النص العربي\'حيث يمكن توليد هذا النصاو العديد من النصوص الاخري اضافه الي زياده عدد الحروف التي يولدها التطبيق هذا النص</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="directions">Directions</string>
    <string name="show_map">Show Map</string>
    <string name="fcm_message">dd</string>
    <string name="notification_content">يوجد حاله قريبه منك</string>
    <string name="notification_title">يوجد حاله قريبه منك</string>
</resources>
