<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_data"
            android:icon="@drawable/icon_my_data"
            android:title="@string/my_data" />
        <item
            android:id="@+id/nav_setting_notify"
            android:icon="@drawable/icon_notify"
            android:title="@string/setting_notify" />
        <item
            android:id="@+id/nav_my_favorite"
            android:icon="@drawable/icon_un_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_my_home"
            android:icon="@drawable/icon_my_home"
            android:title="@string/my_home" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/icon_details"
            android:title="@string/details" />
        <item
            android:id="@+id/nav_call_me"
            android:icon="@drawable/icon_call_me"
            android:title="@string/call_me" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate"
            android:title="@string/rate" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/icon_exit"
            android:title="@string/exit" />

    </group>



</menu>
