<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray77"
    android:orientation="vertical"
    >



    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include"
            layout="@layout/tool_bar" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dim_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/names" />

                    <TextView
                        android:id="@+id/fragmentContentDonationNameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/age" />

                    <TextView
                        android:id="@+id/fragmentContentDonationAgeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/blood_type" />

                    <TextView
                        android:id="@+id/fragmentContentDonationBloodTypeTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/number_of_bags_required" />

                    <TextView
                        android:id="@+id/fragmentContentDonationNumTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hospital" />

                    <TextView
                        android:id="@+id/fragmentContentDonationHospitalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hospital_address" />

                    <TextView
                        android:id="@+id/fragmentContentDonationHospitalAddressTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone" />

                    <TextView
                        android:id="@+id/fragmentContentDonationNumberPhoneTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim_4"
                    android:background="@drawable/shape_border_txt"
                    android:orientation="vertical"
                    android:padding="@dimen/dim_4">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/details_" />

                    <TextView
                        android:id="@+id/fragmentContentDonationDetailsTxt"

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_96"
                        android:layout_weight="1" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim_1"
                    android:background="@color/gray" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/fragmentContentDonationMap"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dim_154" />

                    <Button
                        android:id="@+id/fragmentContentDonationMapBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_btn_directions"
                        android:text="@string/show_map"
                        android:textColor="@color/white" />

                </RelativeLayout>


                <Button
                    android:id="@+id/fragmentContentDonationCallBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@color/green"
                    android:text="@string/call"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/contentDonationprogressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout7" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</LinearLayout>