<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment"
    android:background="@drawable/splash"
    android:padding="@dimen/txt_size_32"
    tools:ignore="TextFields"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >


                <ImageView
                    android:id="@+id/loginFragmentImgIcon"
                    android:layout_width="@dimen/dim_120"
                    android:layout_height="@dimen/dim_120"
                    android:layout_marginTop="36dp"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription,RtlSymmetry,Autofill" />

                <EditText
                    android:id="@+id/NewPasswordFragmentEditUserNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/txt_size_44"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/newPasswordFragmentEditUserCodePin" />

                <EditText
                    android:id="@+id/newPasswordFragmentEditUserCodePin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/txt_size_44"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit"
                    android:ems="10"
                    android:hint="@string/pin_code"
                    android:inputType="number"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginFragmentTxtForgetPassword" />

                <EditText
                    android:id="@+id/NewPasswordFragmentEditUserConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/txt_size_44"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_edit"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/dim_8"
                    android:textColorHint="@color/dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewPasswordFragmentEditUserNewPassword" />

                <Button
                    android:id="@+id/NewPasswordFragmentBtnNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_32"
                    android:background="@drawable/shape_btn_login"
                    android:text="@string/send_Code"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewPasswordFragmentEditUserConfirmPassword" />

                <TextView
                    android:id="@+id/loginFragmentTxtForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_32"
                    android:text="@string/change_password_code"
                    android:textSize="@dimen/txt_size_12"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginFragmentImgIcon" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
